# LLM

./: .gitignore  pyproject.toml
src/AIAgent/CoT/: examples.py  main.py
src/AIAgent/ConstrainedDecoding/: __init__.py  step1_fsm_basics.py  step2_regex_to_fsm.py  step3_token_masking.py  step4_schema_to_regex.py
src/AIAgent/MCP/: Learning The MCP Protocol.md  step1_bare_server.py  step2_sdk_server.py  step3_client.py  step4_agent_with_mcp.py  step5_http_client.py  step5_http_server.py  step6_prompts.py  step6_resources.py  step6_resources_prompts.py
src/AIAgent/MultiAgent/: agent_graph_engine.py  agent_graph_engine_test.py  doc.md  example.py  modular_agent_graph.py  realistic_multi_agent_v2.py  v2_reading_guide-codex.md
src/AIAgent/RAG/: .gitignore  chunker.py  config.py  document_loader.py  embedder.py  hybrid_retriever.py  main.py  phase1_chunker.py  phase1_dense_retriever.py  phase1_vector_store.py  phase2_01_hybrid_retriever.py  phase2_01_sparse_retriever.py  phase2_02_reranker.py  phase2_03_query_rewriter.py  phase2_04_eval_dataset.py  phase2_04_evaluator.py  phase2_04_generation_metrics.py  phase2_04_metric_common.py  phase2_04_metrics.py  phase2_04_models.py  phase2_04_official_ragas_prompts.py  phase2_04_prompt_profiles.py  phase2_04_retrieval_metrics.py  phase3_agentic_rag.py  phase3_hop_assessor.py  phase3_index_tech_docs.json  phase3_main.py  phase3_query_decomposer.py  phase3_router.py  phase3_self_rag.py  phase4_episodic_memory.py  phase4_forgetting.py  phase4_main.py  phase4_memory_security.py  phase4_semantic_memory.py  phase4_structured_memory.py  phase4_summary_memory.py  phase4_token_memory.py  phase4_working_memory.py  phase5.json  (+17 more)
src/AIAgent/ReAct/: logger.py  main.py  prompt.py  renderer.py  tutorial.md
src/AIAgent/ReActMulti/: .gitignore  a.json  agent.py  context.py  events.py  executor.py  llm.py  main.py  permission.py  prompt.py  protocol.py  renderer.py  session.py  subagent.py  test.py  test_permission_policy.py  test_subagent.py  util.py
src/AIAgent/StateMachine_GraphFlow/: rewrite_main.py  rewrite_tools.py  state_machine.py
src/AIAgent/Tool/: raw_prompt_reveal.py  tool_call.md
src/Agent/: result.md
src/Agent/CoT/: __init__.py  base.py  compare.py  cot_tutorial.md.resolved  few_shot_cot.py  main.py  prompts.py  zero_shot_cot.py
src/Agent/MultiAgent/: realistic_multi_agent.py  realistic_multi_agent_graph_v2.py  v2_reading_guide.md.resolved
src/Agent/ReAct/: 1  a.json  a.md  example.js  long_loop.py  main.py  prompt.py  regex.py  renderer.py  res.js  rewrite.py  test.py  tools.py  (+1 more)
src/cross_entropy/: cross_entropy.py
src/rewrite_transformer/: test.py
src/stable_diffusion/: __init__.py  diffusion.py  sample.py  scheduler.py  train.py  unet.py
(+159 files in other folders)
