[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "torch",
    "torchvision",
    "torchaudio",
    "tokenizers>=0.22.2",
    "scikit-learn>=1.7.2",
    "openai>=2.29.0",
    "dotenv>=0.9.9",
    "mcp>=1.28.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "jieba>=0.42.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
